2008-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -postCalDAVEventReplyTo:recipients]): new
	method that handle CalDAV REPLY posts by updating the event in the
	table of the SOGo users and send the reply by email as well.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:_pageNameforOldObject:_oldObjectandNewObject:_newObjecttoAttendees:_attendees]):
	take the current user as originator rather than the object's owner.

2008-07-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-POSTAction:localContext]): take the content type as well as the
	request and pass them as parameter to the new method below.
	([SOGoObject
	-davPOSTRequest:requestwithContentType:cTypeinContext:localContext]):
	new method designed to handle POST requests on DAV objects.

2008-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-caldavEventRequest:eventfrom:originatorto:recipients]): handle
	caldav replies.
	([SOGoAppointmentFolder -lookupComponentByUID:uid]): new method
	that returns an event search by uid.

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m ([SOGoUserFolder -davCalendarHomeSet])
	([SOGoUserFolder -davCalendarScheduleInboxURL])
	([SOGoUserFolder -davCalendarScheduleOutboxURL])
	([SOGoUserFolder -davDropboxHomeURL])
	([SOGoUserFolder -davNotificationsURL]): new methods for
	supporting the caldav-schedule draft extension to CalDAV.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -davComplianceClassesInContext:]): append
	"calendar-schedule" to the list.
	([SOGoAppointmentFolder -POSTAction:localContext]): new method to
	handle POST CalDAV requests.
	([SOGoAppointmentFolder -davCollectionTag]): new method.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder